@@ -1,3 +1,7 @@
+2010-11-29  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #15189: Frontend Editing edit panels are shown for content element types that cannot be edited
+
 2010-11-29  Francois Suter  <francois@typo3.org>
 
 	* Fixed bug #16583: Localization overview has no color-coded status anymore
